crates/apollo-compiler/test_data/diagnostics/0055_duplicate_variable_definitions.txt
Error: the variable `$atOtherHomes` is declared multiple times
   ╭─[0055_duplicate_variable_definitions.graphql:1:49]
   │
 1 │ query houseTrainedQuery($atOtherHomes: Boolean, $atOtherHomes: Boolean) {
   │                         ───────────┬──────────  ───────────┬──────────  
   │                                    ╰──────────────────────────────────── previous definition of `$atOtherHomes` here
   │                                                            │            
   │                                                            ╰──────────── `$atOtherHomes` defined again here
───╯

